--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
     <name>AdviceExchange</name>
 
     <properties>
+
+        <spring.version>3.2.6.RELEASE</spring.version>
+
         <hibernate.version>4.3.0.Final</hibernate.version>
 
         <mysql.version>5.1.28</mysql.version>
@@ -20,6 +23,33 @@
     </properties>
 
     <dependencies>
+
+        <!-- Spring -->
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
 
         <!-- Hibernate -->
 
