--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -1,16 +1,39 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>AdviceExchange</artifactId>
-        <groupId>com.springapp</groupId>
+        <groupId>com.dozortsev.adviceexchange</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>DAO</name>
     <groupId>com.dozortsev.adviceexchange.dao</groupId>
     <artifactId>dao</artifactId>
+    <packaging>jar</packaging>
 
+
+    <properties>
+        <apache.dbcp.version>1.4</apache.dbcp.version>
+    </properties>
+
+
+    <dependencies>
+
+        <dependency>
+            <groupId>com.dozortsev.adviceexchange.domain</groupId>
+            <artifactId>domain</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <!-- Commons Database Connection Pooling -->
+
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>${apache.dbcp.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+    </dependencies>
 
 </project>
