--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,12 +18,6 @@
             <groupId>com.dozortsev.adviceexchange.dao</groupId>
             <artifactId>dao</artifactId>
             <version>${project.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-dbcp</groupId>
-                    <artifactId>commons-dbcp</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
 
@@ -37,6 +31,21 @@
         </dependency>
 
     </dependencies>
+
+
+    <!-- Build plugins -->
+
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+            </plugin>
+
+        </plugins>
+    </build>
 
 
     <!-- Reporting plugins -->
@@ -53,6 +62,5 @@
             </plugin>
         </plugins>
     </reporting>
-
 
 </project>
