--- a/service/pom.xml
+++ b/service/pom.xml
@@ -15,6 +15,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.dozortsev.adviceexchange.domain</groupId>
+            <artifactId>domain</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.dozortsev.adviceexchange.dao</groupId>
             <artifactId>dao</artifactId>
             <version>${project.version}</version>
