--- a/service/pom.xml
+++ b/service/pom.xml
@@ -48,6 +48,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.16</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <log4j.configuration>
+                            file:${project.basedir}/src/test/resource/log4j.properties
+                        </log4j.configuration>
+                    </systemPropertyVariables>
+                </configuration>
             </plugin>
 
         </plugins>
