--- a/web/pom.xml
+++ b/web/pom.xml
@@ -8,7 +8,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <name>Web</name>
-    <groupId>com.dozortsev.adviceexchange.web</groupId>
     <artifactId>web</artifactId>
     <packaging>war</packaging>
 
@@ -25,7 +24,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.dozortsev.adviceexchange.service</groupId>
+            <groupId>com.dozortsev.adviceexchange</groupId>
             <artifactId>service</artifactId>
             <version>${project.version}</version>
         </dependency>
