--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,11 @@
 
         <spring.version>3.2.6.RELEASE</spring.version>
 
-        <hibernate.version>4.3.0.Final</hibernate.version>
+        <hibernate.version>4.2.6.Final</hibernate.version>
 
-        <hibernate.validator.version>4.2.0.Final</hibernate.validator.version>
+        <hibernate.validator.version>5.0.2.Final</hibernate.validator.version>
 
-        <mysql.version>5.1.25</mysql.version>
+        <mysql.version>5.1.28</mysql.version>
 
         <hsqldb.version>2.3.1</hsqldb.version>
 
@@ -121,6 +121,12 @@
 
 
         <!-- Hibernate -->
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
