--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,12 @@
         <servlet-class>
             org.springframework.web.servlet.DispatcherServlet
         </servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>
+                /WEB-INF/mvc-dispatcher-servlet.xml
+            </param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
@@ -22,7 +28,7 @@
     </servlet-mapping>
 
 
-    <!-- Register a a DelegatingFilterProxy instance -->
+    <!-- Register a DelegatingFilterProxy instance -->
 
     <filter>
         <filter-name>springSecurityFilterChain</filter-name>
