--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -9,21 +9,15 @@
     <!-- DispatcherServlet declaration -->
 
     <servlet>
-        <servlet-name>mvcServletDispatcher</servlet-name>
+        <servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>
             org.springframework.web.servlet.DispatcherServlet
         </servlet-class>
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>
-                /WEB-INF/mvc-dispatcher-servlet.xml
-            </param-value>
-        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>mvcServletDispatcher</servlet-name>
+        <servlet-name>mvc-dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
