--- a/service/src/test/resources/log4j.properties
+++ b/service/src/test/resources/log4j.properties
@@ -7,3 +7,5 @@ log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = %d{HH:mm:ss} %5p %c : %L = %m %n
+
+# log4j.logger.org.hibernate=DEBUG
