[#30]: Login jsp was done

--- a/web/src/main/resources/view.properties
+++ b/web/src/main/resources/view.properties
@@ -1,8 +1,20 @@
 
     # login.jsp #
 
-login.title = Welcome
+login.title = Log in
 
-login.lbl.login = Login
+login.lbl.signup = Sign up
+login.lbl.name = Name
 login.lbl.pwd = Password
-login.btn.nac = Create account
+login.lbl.email = Email
+login.lbl.age = Age
+login.lbl.site = Site
+login.lbl.loc = Location
+login.lbl.opi = Optional info
+login.lbl.aboutMe = About me
+
+login.btn.nac = Create
+
+login.err.msg = You must register before you can do that!
+login.err.cas = Caused:
+
