Fix #52: Add Maven Tomcat plugin & define appender log4j file

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -81,11 +81,11 @@
             <!-- JBoss AS plugin -->
 
             <plugin>
-                <groupId>org.jboss.as.plugins</groupId>
-                <artifactId>jboss-as-maven-plugin</artifactId>
-                <version>7.5.Final</version>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
                 <configuration>
-                    <filename>${project.parent.artifactId}.war</filename>
+                    <finalName>${project.parent.artifactId}.war</finalName>
                 </configuration>
             </plugin>
         </plugins>
