--- a/web/pom.xml
+++ b/web/pom.xml
@@ -36,14 +36,12 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>${servlet.version}</version>
-            <!--<scope>provided</scope>-->
         </dependency>
 
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
             <version>${jsp.version}</version>
-            <!--<scope>provided</scope>-->
         </dependency>
 
 
@@ -53,7 +51,6 @@
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
-            <!--<scope>provided</scope>-->
         </dependency>
 
     </dependencies>
@@ -78,7 +75,7 @@
                 </configuration>
             </plugin>
 
-            <!-- JBoss AS plugin -->
+            <!-- Maven Tomcat plugin -->
 
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
