--- a/web/src/main/resources/view.properties
+++ b/web/src/main/resources/view.properties
@@ -1,4 +1,19 @@
 
+    # general
+
+questions = Questions
+tags = Tags
+users = Users
+votes = votes
+answers = answers
+asked = asked
+answered = answered
+del = delete
+edit = edit
+logout = Log Out
+ask.qs = Ask a Question
+
+
     # login.jsp #
 
 login.title = Log in
@@ -15,6 +30,31 @@ login.lbl.aboutMe = About me
 
 login.btn.nac = Create
 
-login.err.msg = You must register before you can do that!
-login.err.cas = Caused:
 
+    # index.jsp
+
+index.lbl.all.qs = All questions
+index.msg.search.err = Your search returned no matches.
+
+
+    # question.jsp
+
+qs.btn.add.cm = Add Comment
+qs.btn.post.asw = Post Your Answer
+
+qs.lbl.comments = Comments
+qs.lbl.answers = Answers
+qs.lbl.answers.msg = Not answered yet
+as.lbl.you.asw = Your answer
+as.lbl.browse.1 = Browse other questions tagged:
+as.lbl.browse.2 = ask your own questions
+
+
+    # ask-question.jsp
+
+qs.btn.post.qs = Post Your Question
+
+aq.lbl.title = Title
+aq.lbl.tags.msg = at least one tag such as [stomachache], max 5 tags
+
+aq.input.title.ph = What's your human health questions? Be specific.
