--- a/web/pom.xml
+++ b/web/pom.xml
@@ -75,6 +75,7 @@
                 </configuration>
             </plugin>
 
+
             <!-- Maven Tomcat plugin -->
 
             <plugin>
@@ -82,7 +83,15 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <finalName>${project.parent.artifactId}.war</finalName>
+                    <finalName>
+                        ${project.parent.artifactId}.war
+                    </finalName>
+                    <url>
+                        http://localhost:8080/${project.parent.artifactId}/login
+                    </url>
+                    <path>
+                        /${project.parent.artifactId}
+                    </path>
                 </configuration>
             </plugin>
         </plugins>
