--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
         <hsqldb.version>2.3.1</hsqldb.version>
 
         <slf4j.version>1.7.5</slf4j.version>
+
+        <jooq.version>3.4.0</jooq.version>
     </properties>
 
     <dependencies>
@@ -112,6 +114,25 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate.validator.version}</version>
+        </dependency>
+
+
+        <!-- jOOQ -->
+
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+            <version>${jooq.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq-meta</artifactId>
+            <version>${jooq.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq-codegen</artifactId>
+            <version>${jooq.version}</version>
         </dependency>
 
 
