Update view messages

--- a/web/src/main/resources/view.properties
+++ b/web/src/main/resources/view.properties
@@ -46,8 +46,8 @@ qs.lbl.comments = Comments
 qs.lbl.answers = Answers
 qs.lbl.answers.msg = Not answered yet
 as.lbl.you.asw = Your answer
-as.lbl.browse.1 = Browse other questions tagged:
-as.lbl.browse.2 = ask your own questions
+as.lbl.browse.prefix = Browse other questions tagged:
+as.lbl.browse.suffix = ask your own questions
 
 
     # ask-question.jsp
