--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -66,7 +66,7 @@
                     <driver>com.mysql.jdbc.Driver</driver>
                     <url>jdbc:mysql://localhost:3306/adviceexchange</url>
                     <username>root</username>
-                    <password>anton10</password>
+                    <password>root</password>
                 </configuration>
 
                 <executions>
