--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -30,13 +30,13 @@
                 <artifactId>jooq-codegen-maven</artifactId>
                 <version>${jooq.version}</version>
 
-                <executions>
+                <!--<executions>
                     <execution>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                     </execution>
-                </executions>
+                </executions>-->
 
                 <dependencies>
                     <dependency>
@@ -51,7 +51,7 @@
                         <driver>com.mysql.jdbc.Driver</driver>
                         <url>jdbc:mysql://localhost:3306/adviceexchange</url>
                         <user>root</user>
-                        <password>anton10</password>
+                        <password>root</password>
                     </jdbc>
 
                     <!-- Generator parameters -->
@@ -59,7 +59,8 @@
                         <name>org.jooq.util.DefaultGenerator</name>
                         <database>
                             <name>org.jooq.util.mysql.MySQLDatabase</name>
-                            <includes>.*</includes>
+                            <includes></includes>
+                            <excludes>.*</excludes>
                             <inputSchema>adviceexchange</inputSchema>
                         </database>
                         <target>
